--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,63 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #FC466B;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #3F5EFB, #FC466B);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #3F5EFB, #FC466B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  min-height: 820px;
+  position: relative;
+  width: 100%;    
+  justify-content: space-around;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App > .header-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-section > h1 {
+  font-size: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.formArea {
+  /* border: 1px solid black; */
+  width: 300px;
+  height: 100px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+input {
+  height: 40px;
+  background-color: transparent;
+  /* border-bottom: 1px solid black; */
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-color: black;
+  outline: none;
 }
 
-.read-the-docs {
-  color: #888;
+::placeholder {
+  color: rgb(60, 60, 60);
+  opacity: 1; /* Firefox */
 }
+
+.note-para > a {
+  font-size: larger;
+  text-decoration: none;
+  color: black;
+}
+
+/* .resultArea {
+  width: 70%;
+  /* border: 1px solid black; 
+} */
+
+/* .resultArea > .txnArea {
+  width: 60%;
+  position: absolute;
+} */
